...

  return (
    <SafeArea edges={['top']}>
      <Tabs style={{ flex: 1 }}>
        <TabSlot style={{ flex: 1 }} />
        <TabList style={themedTabBarStyle}>
          <TabTrigger name="index" href="/" testID="home-tab" asChild>
            <Pressable
              style={styles.tabTrigger}
              onPressIn={triggerTabHaptic}
              hitSlop={{ top: 10, bottom: 10, left: 5, right: 5 }}
            >
              <TabButton
...
                label="Home"
                isActive={currentTab === 'index'}
                color={themedTabBarStyle.color}
              />
            </Pressable>
          </TabTrigger>
          <TabTrigger name="recordings" href="/recordings" testID="recordings-tab" asChild>
            <Pressable
              style={styles.tabTrigger}
              onPressIn={triggerTabHaptic}
              hitSlop={{ top: 10, bottom: 10, left: 5, right: 5 }}
            >
              <TabButton
...
