...
              accessibilityRole="button"
              accessibilityLabel={`Recording for ${formatDuration(recordingDuration)}. Tap to stop`}
              accessibilityHint="Double tap to stop recording"
              accessibilityState={{
                busy: true,
              }}
              testID="recording-stop-button"
            />
            <Spacer size="sm" />

            <Flex testID="recording-duration-container" alignItems="center">
              <Text
                accessible={true}
                accessibilityLiveRegion="polite"
                variant="h1"
                color="secondary"
                textAlign="center"
...
