...
    accessibilityState = 'Play recording again';
    accessibilityHint = 'Double tap to replay the recorded bird sounds';
  }

  return (
    <Flex
      testID={'audio-player-container'}
      paddingTop="none"
      accessible={true}
      accessibilityRole="none"
      accessibilityLabel={`Audio player. Recording duration ${formatDuration(displayDuration)}. Currently ${isPlaying ? 'playing' : 'paused'}`}
    >
      {/* Header */}
...
            accessible={true}
            accessibilityRole="button"
            accessibilityLabel="Delete recording"
            accessibilityHint="Double tap to Delete the current recording and start a new one"
            hitSlop={{ top: 10, bottom: 10, left: 10, right: 10 }}
            text="Delete"
            testID={`delete-recording-button`}
            fullWidth={true}
          />
        )}
      </Flex>

      {/* Progress Bar */}
...
